--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "nonebot-plugin-marshoai"
 version = "0.1"
-description = "Nonebot2插件，从哔哩哔哩会员购获取简易展览数据"
+description = "Nonebot2插件，调用Azure OpenAI服务实现猫娘聊天"
 readme = "README.md"
 requires-python = "<4.0,>=3.9"
 authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
@@ -10,7 +10,8 @@ dependencies = [
     "nonebot-plugin-alconna>=0.48.0",
     "azure-ai-inference>=1.0.0b4",
     "zhDatetime>=1.1.0",
-    "aiohttp>=3.9"
+    "aiohttp>=3.9",
+    "httpx>=0.27.0"
 ]
 license = { text = "MIT" }
 
