--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "nonebot-plugin-marshoai"
-version = "0.1.1"
+version = "0.1.2"
 description = "Nonebot2插件，调用Azure OpenAI服务实现猫娘聊天"
 readme = "README.md"
 requires-python = "<4.0,>=3.9"
 authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
 dependencies = [
-    "nonebot2[fastapi, websockets]>=2.2.0",
+    "nonebot2>=2.2.0",
     "nonebot-plugin-alconna>=0.48.0",
     "azure-ai-inference>=1.0.0b4",
     "zhDatetime>=1.1.1",
@@ -21,10 +21,6 @@ Homepage = "https://github.com/LiteyukiStudio/nonebot-plugin-marshoai"
 
 [tool.nonebot]
 plugins = ["nonebot_plugin_marshoai"]
-adapters = [
-    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
-
-]
 
 
 [tool.pdm]
