--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nonebot-plugin-marshoai"
-version = "0.1.3"
+version = "0.1.4"
 description = "Nonebot2插件，调用Azure OpenAI服务实现猫娘聊天"
 readme = "README.md"
 requires-python = "<4.0,>=3.9"
@@ -8,6 +8,7 @@ authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
 dependencies = [
     "nonebot2>=2.2.0",
     "nonebot-plugin-alconna>=0.48.0",
+    "nonebot-plugin-localstore>=0.7.1",
     "azure-ai-inference>=1.0.0b4",
     "zhDatetime>=1.1.1",
     "aiohttp>=3.9",
