✨ 更新配置，添加nb-cli开发依赖和昵称未设置时是否提示的选项

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,11 @@ path = "nonebot_plugin_marshoai/constants.py"
 
 [tool.pdm.build]
 includes = []
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "nb-cli>=1.4.2",
+]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
