--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "azure-ai-inference>=1.0.0b4",
     "zhDatetime>=1.1.1",
     "aiohttp>=3.9",
-    "httpx>=0.27.0"
+    "httpx>=0.27.0",
 ]
 license = { text = "MIT" }
 
@@ -22,6 +22,9 @@ Homepage = "https://github.com/LiteyukiStudio/nonebot-plugin-marshoai"
 
 [tool.nonebot]
 plugins = ["nonebot_plugin_marshoai"]
+adapters = [
+    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
+]
 
 [tool.pdm]
 distribution = true
@@ -34,9 +37,7 @@ path = "nonebot_plugin_marshoai/constants.py"
 includes = []
 
 [tool.pdm.dev-dependencies]
-dev = [
-    "nb-cli>=1.4.2",
-]
+dev = ["nb-cli>=1.4.2"]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
