--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,9 @@ adapters = [
 distribution = true
 
 [tool.pdm.version]
-source = "file"
-path = "nonebot_plugin_marshoai/constants.py"
+source = "scm"
+tag_filter = "v*"
+tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
 
 [tool.pdm.build]
 includes = []
