✨ 更新README，添加自定义指令前缀说明；更新配置，支持默认命令前缀和别名

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,10 @@ Homepage = "https://github.com/LiteyukiStudio/nonebot-plugin-marshoai"
 
 [tool.nonebot]
 plugins = ["nonebot_plugin_marshoai"]
-# adapters = [
-#     { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
-# ] 测试用
+# 测试用
+adapters = [
+    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
+]
 
 [tool.pdm]
 distribution = true
