--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "nonebot-plugin-marshoai"
 dynamic = ["version"]
-description = "Nonebot2插件，调用Azure OpenAI服务实现猫娘聊天"
+description = "Nonebot2插件，调用Azure OpenAI等AI服务实现猫娘聊天"
 readme = "README.md"
 requires-python = "<4.0,>=3.9"
 authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
