--- a/nonebot_plugin_marshoai/config_example.yaml
+++ b/nonebot_plugin_marshoai/config_example.yaml
@@ -1,9 +1,4 @@
-marshoai_token: ""  # MarshoAI的认证token，默认为空。必填
-
-# 支持的图片模型列表，默认包含gpt-4o和gpt-4o-mini。
-marshoai_support_image_models:
-  - gpt-4o
-  - gpt-4o-mini
+marshoai_token: ""  # 调用API使用的访问token，默认为空。
 
 marshoai_default_name: "marsho"  # 默认名称，设定为marsho。
 
@@ -25,21 +20,19 @@ marshoai_prompt:
 
 marshoai_additional_prompt: ""  # 额外的提示内容，默认为空。
 
-marshoai_poke_suffix: "揉了揉你的猫耳"  # 当进行互动时附加的后缀。
+marshoai_poke_suffix: "揉了揉你的猫耳"  # 当进行戳一戳时附加的后缀。
 
 marshoai_enable_nickname_tip: true  # 是否启用昵称提示。
 
 marshoai_enable_support_image_tip: true  # 是否启用支持图片提示。
 
-marshoai_enable_praises: true  # 是否启用夸奖功能。
-
-marshoai_enable_time_prompt: true  # 是否启用时间提示功能。
+marshoai_enable_praises: true  # 是否启用夸赞名单功能。
 
 marshoai_enable_tools: true  # 是否启用工具支持。
 
 marshoai_load_builtin_tools: true  # 是否加载内置工具。
 
-marshoai_azure_endpoint: "https://models.inference.ai.azure.com"  # Azure API的地址。
+marshoai_azure_endpoint: "https://models.inference.ai.azure.com"  # OpenAI 标准格式 API 的端点。
 
 # 模型参数配置
 marshoai_temperature: null  # 调整生成的多样性，未设置时使用默认值。
