--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "zhDatetime>=1.1.1",
     "aiohttp>=3.9",
     "httpx>=0.27.0",
-    "ruamel.yaml>=0.18.6"
+    "ruamel.yaml>=0.18.6",
+    "pyyaml>=6.0.2"
 
 ]
 license = { text = "MIT" }
