--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "pyyaml>=6.0.2"
     
 ]
-license = { text = "MIT" }
+license = { text = "MIT, Mulan PSL v2" }
 
 [project.urls]
 Homepage = "https://github.com/LiteyukiStudio/nonebot-plugin-marshoai"
