--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,12 @@ tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9
 [tool.pdm.build]
 includes = []
 
-[tool.pdm.dev-dependencies]
-dev = ["nb-cli>=1.4.2"]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[dependency-groups]
+dev = [
+    "nb-cli>=1.4.2",
+    "pytest>=8.3.4",
+]
