--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "nonebot-plugin-marshoai"
 dynamic = ["version"]
 description = "Nonebot2插件，调用Azure OpenAI等AI服务实现猫娘聊天"
 readme = "README.md"
-requires-python = "<4.0,>=3.9"
+requires-python = "<4.0,>=3.10"
 authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
 dependencies = [
     "nonebot2>=2.2.0",
@@ -14,8 +14,10 @@ dependencies = [
     "aiohttp>=3.9",
     "httpx>=0.27.0",
     "ruamel.yaml>=0.18.6",
-    "pyyaml>=6.0.2"
-    
+    "pyyaml>=6.0.2",
+    "psutil>=6.1.0",
+    "beautifulsoup4>=4.12.3"
+
 ]
 license = { text = "MIT, Mulan PSL v2" }
 
@@ -32,6 +34,9 @@ adapters = [
 
 [tool.pdm]
 distribution = true
+python.use_venv = true
+python.venv_in_project = true
+
 
 [tool.pdm.version]
 source = "scm"
@@ -49,4 +54,6 @@ build-backend = "pdm.backend"
 dev = [
     "nb-cli>=1.4.2",
     "pytest>=8.3.4",
+    "pre-commit>=4.0.1",
+    "nonebot-adapter-onebot>=2.4.6",
 ]
