--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,4 +56,6 @@ dev = [
     "pytest>=8.3.4",
     "pre-commit>=4.0.1",
     "nonebot-adapter-onebot>=2.4.6",
+    "mypy>=1.13.0",
+    "black>=24.10.0",
 ]
