--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         python -m pip install pdm
         pdm install
+        pre-commit install
 
     - name: Run pre-commit
       run: pre-commit run --all-files
