--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -19,6 +19,8 @@ jobs:
       run: |
         python -m pip install pdm
         pdm install
+
+        source .venv/bin/activate
         pre-commit install
 
     - name: Run pre-commit
