✨ 更新 pre-commit 工作流，优化依赖安装步骤并禁用虚拟环境使用

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,9 +18,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pdm
-        pdm install
-
-        source .venv/bin/activate
+        pdm config use_venv false
+        pdm install --no-lock
         pre-commit install
 
     - name: Run pre-commit
