✨ 更新 pre-commit 工作流，使用虚拟环境中的 Python 运行 pre-commit 安装和执行

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         python -m pip install pdm
         pdm install --no-lock
-        pre-commit install
+        .venv/bin/python -m pre-commit install
 
     - name: Run pre-commit
-      run: pre-commit run --all-files
+      run: .venv/bin/python -m pre-commit run --all-files
