--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,8 +18,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pdm
+        pdm config python.use_venv false
         pdm install --no-lock
-        .venv/bin/python -m pre-commit install
+        pre-commit install
 
     - name: Run pre-commit
-      run: .venv/bin/python -m pre-commit run --all-files
+      run: pre-commit run --all-files
