--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pdm
+        python -m pip install pre-commit
         pdm config python.use_venv false
         pdm install --no-lock
         pre-commit install
