--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,11 @@ repos:
     hooks:
       - id: isort
 
-  # - repo: https://github.com/psf/black
-  #   rev: 24.4.2
-  #   hooks:
-  #     - id: black
-  #       args: [--config=./pyproject.toml]
+  - repo: https://github.com/psf/black
+    rev: 24.4.2
+    hooks:
+      - id: black
+        args: [--config=./pyproject.toml]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
