--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,16 @@
 fail_fast: true
 repos:
-
   - repo: https://github.com/psf/black
     rev: 24.4.2
     hooks:
       - id: black
         args: [--config=./pyproject.toml]
+
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        args: ["--profile", "black"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
