--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "ruamel.yaml>=0.18.6",
     "pyyaml>=6.0.2",
     "psutil>=6.1.0",
-    "beautifulsoup4>=4.12.3"
+    "beautifulsoup4>=4.12.3",
+    "pydantic>=2.10.3"
 
 ]
 license = { text = "MIT, Mulan PSL v2" }
