--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,10 +25,10 @@ repos:
     hooks:
       - id: mypy
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-      - id: check-added-large-files
+ # - repo: https://github.com/pre-commit/pre-commit-hooks
+ #   rev: v4.0.1
+ #   hooks:
+ #     - id: trailing-whitespace
+ #     - id: end-of-file-fixer
+ #     - id: check-yaml
+ #     - id: check-added-large-files
