✨ 添加 VitePress 配置和主题支持；更新 .gitignore 文件以排除不必要的目录；新增中英文文档首页

--- a/.gitignore
+++ b/.gitignore
@@ -173,10 +173,14 @@ bot.py
 pdm.lock
 praises.json
 *.bak
-config/
+./config/
 
 # dev
 .vscode/
 
 # macos finder
 .DS_Store
+
+# vitepress and node.js
+node_modules/
+docs/.vitepress/cache
