✨ 更新依赖项，添加 litedoc 和 vitepress-sidebar；修改 .gitignore 以排除生成的文档目录；修正文档链接格式

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,4 +63,5 @@ dev = [
     "nonebot-adapter-onebot>=2.4.6",
     "mypy>=1.13.0",
     "black>=24.10.0",
+    "litedoc>=0.1.0.dev20240906203154",
 ]
