--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "devDependencies": {
-    "vitepress": "^1.5.0"
+    "vitepress": "^1.5.0",
+    "vitepress-sidebar": "^1.30.2"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
