✨ 更新文档配置以启用从索引文件获取文件夹标题；修改开发脚本以支持主机选项

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "vitepress-sidebar": "^1.30.2"
   },
   "scripts": {
-    "docs:dev": "vitepress dev docs",
+    "docs:dev": "vitepress dev docs --host",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
