✨ 添加内置工具插件，支持获取已加载插件列表和读取本地文件内容功能

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,10 @@ dependencies = [
     "psutil>=6.1.0",
     "beautifulsoup4>=4.12.3",
     "pydantic>=2.10.3",
-    "litedoc>=0.1.0.dev20241214103915"
+    "litedoc>=0.1.0.dev20241214103915",
+    "newspaper3k>=0.2.8",
+    "lxml[html_clean]>=5.3.0",
+    "aiofiles>=24.1.0"
 
 ]
 license = { text = "MIT, Mulan PSL v2" }
@@ -65,6 +68,7 @@ dev = [
     "mypy>=1.13.0",
     "black>=24.10.0",
     "litedoc>=0.1.0.dev20240906203154",
+    "viztracer>=1.0.0",
 ]
 test = [
     "nonebug>=0.4.3",
