--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "lxml[html_clean]>=5.3.0",
     "aiofiles>=24.1.0",
     "sumy>=0.11.0",
-    "azure-ai-inference>=1.0.0b6"
+    "azure-ai-inference>=1.0.0b6",
+    "watchdog>=6.0.0"
 
 ]
 license = { text = "MIT, Mulan PSL v2" }
