--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,8 @@ profile = "black"
 [tool.pdm.version]
 source = "scm"
 tag_filter = "v*"
-tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc|dev)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?)$'
+tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
+fallback_version = "0.1.0"
 
 [tool.pdm.build]
 includes = []
