--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     "aiofiles>=24.1.0",
     "sumy>=0.11.0",
     "azure-ai-inference>=1.0.0b6",
-    "watchdog>=6.0.0"
+    "watchdog>=6.0.0",
+    "nonebot-plugin-apscheduler>=0.5.0"
 
 ]
 license = { text = "MIT, Mulan PSL v2" }
