--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "sumy>=0.11.0",
     "azure-ai-inference>=1.0.0b6",
     "watchdog>=6.0.0",
-    "nonebot-plugin-apscheduler>=0.5.0"
+    "nonebot-plugin-apscheduler>=0.5.0",
+    "openai>=1.58.1"
 
 ]
 license = { text = "MIT, Mulan PSL v2" }
