--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -13,9 +13,9 @@ jobs:
   pypi-publish:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
-      enviroment: release
-      permissions:
-        id-token: write
+    environment: release
+    permissions:
+      id-token: write
     steps:
     - uses: actions/checkout@master
     - name: Set up Python
