--- a/nonebot_plugin_marshoai/config_example.yaml
+++ b/nonebot_plugin_marshoai/config_example.yaml
@@ -8,7 +8,7 @@ marshoai_aliases:
 
 marshoai_at: false # 决定是否开启at响应
 
-marshoai_main_colour: "FFAAAA" # 默认主色，部分插件和功能使用
+marshoai_main_colour: "FEABA9" # 默认主色，部分插件和功能使用
 marshoai_default_model: "gpt-4o-mini" # 默认模型，设定为gpt-4o-mini。
 
 # 主提示词，定义了Marsho的性格和行为，包含多语言名字翻译规则和对特定问题的回答约束。
