--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "nonebot-plugin-localstore>=0.7.1",
     "zhDatetime>=2.0.0",
     "aiohttp>=3.9",
-    "httpx>=0.27.0",
+    "httpx>=0.27.0,<0.28.0",
     "ruamel.yaml>=0.18.6",
     "pyyaml>=6.0.2",
     "psutil>=6.1.0",
