--- a/nonebot_plugin_marshoai/config_example.yaml
+++ b/nonebot_plugin_marshoai/config_example.yaml
@@ -61,9 +61,7 @@ marshoai_devmode: false # 是否启用开发者模式。
 marshoai_azure_endpoint: "https://models.inference.ai.azure.com" # OpenAI 标准格式 API 的端点。
 
 # 模型参数配置
-marshoai_temperature: null # 调整生成的多样性，未设置时使用默认值。
-marshoai_max_tokens: null # 最大生成的token数，未设置时使用默认值。
-marshoai_top_p: null # 使用的概率采样值，未设置时使用默认值。
+marshoai_model_args: {} # 模型参数配置，默认空。
 marshoai_timeout: 50.0 # 请求超时时间。
 
 marshoai_additional_image_models: [] # 额外的图片模型列表，默认空。
