--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ dependencies = [
     "azure-ai-inference>=1.0.0b6",
     "watchdog>=6.0.0",
     "nonebot-plugin-apscheduler>=0.5.0",
-    "openai>=1.58.1"
-
+    "openai>=1.58.1",
+    "nonebot-plugin-latex>=0.0.2.2"
 ]
 license = { text = "MIT, Mulan PSL v2" }
 
