--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -1,6 +1,6 @@
 name: Deploy VitePress site to Liteyuki PaaS
 
-on: ["push", "pull_request"]
+on: ["push", "pull_request_target"]
 
 permissions:
   contents: write
