--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "azure-ai-inference>=1.0.0b6",
     "watchdog>=6.0.0",
     "nonebot-plugin-apscheduler>=0.5.0",
-    "openai>=1.58.1"
+    "openai>=1.58.1",
+    "nonebot-plugin-argot>=0.1.7"
 
 ]
 license = { text = "MIT, Mulan PSL v2" }
