--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 dependencies = [
     "nonebot2>=2.4.0",
-    "nonebot-plugin-alconna>=0.57.0",
+    "nonebot-plugin-alconna>=0.57.1",
     "nonebot-plugin-localstore>=0.7.1",
     "zhDatetime>=2.0.0",
     "aiohttp>=3.9",
@@ -28,7 +28,8 @@ dependencies = [
     "azure-ai-inference>=1.0.0b6",
     "watchdog>=6.0.0",
     "nonebot-plugin-apscheduler>=0.5.0",
-    "openai>=1.58.1"
+    "openai>=1.58.1",
+    "nonebot-plugin-argot>=0.1.7"
 
 ]
 license = { text = "MIT, Mulan PSL v2" }
