--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ plugins = ["nonebot_plugin_marshoai"]
 # 测试用
 adapters = [
     { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
+    { name = "nonebot-adapter-milky", module_name = "nonebot.adapters.milky" },
+
 ]
 
 [tool.pdm]
